--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,16 +24,30 @@
         android:gravity="center">
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnFaux"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/bouton_faux" />
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/btnVrai"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/bouton_vrai" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/btnNext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/question_suivante" />
 
     </LinearLayout>
 
