--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -45,7 +45,12 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center">
-
+        <Button
+            android:id="@+id/btnafficheAide"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@string/btn_affiche_aide"/>
         <Button
             android:id="@+id/btnNext"
             android:layout_gravity="bottom|end"
